Add Branch Management Features and Enhance Movie Handling
- Added BranchTheaterHandler for handling branch theater information requests.
- Updated HandlerFactory to include BranchTheaterHandler.
- Enhanced Message entity to support branch-related data.
- Updated ClientRequests and RequestTypes with new branch-related constants.
- Modified MovieRequestHandler to handle GET_MOVIES_BY_BRANCH_ID.
- Updated PrimaryController to load branches and filter movies by branch.
- Enhanced SimpleClient to handle branch information from the server.